fixed img alignment issue

--- a/WebApplication2/App/Theme/css/style.css
+++ b/WebApplication2/App/Theme/css/style.css
@@ -198,6 +198,7 @@ width: 48% !important;
     }
 
     .chat img {
+        position:absolute;
         width: 40px;
         border-radius: 50%;
         margin: 15px;
@@ -224,6 +225,7 @@ width: 48% !important;
 
 .chat p {
     padding: 15px 0 0 0;
+    margin-left:70px;
     float: left;
     width: 220px;
     display: flex;
